Big Fix
characters used to show whitespace on the right
should be fixed now
game popups no longer position absolute, and portfolio page is hidden when they are open

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ html, body {
     padding: 0;
     width: 100%;
     overflow-x: hidden;
+    position: relative;
 }
 
 .pages
@@ -303,9 +304,6 @@ html, body {
 /*GAME POPUP*/
 .Game_Popup
 {
-    position: absolute;
-    top: 0;
-    left: 0;
     color: white;
     width: 100%;
     min-height: 100vh;
